Refactoring and bug fixing in observations and conditions